# spectra

./: .cursorignore  .env.example  .gitignore  .tmuxp.yaml  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.githooks/: commit-msg
backend/: .dockerignore  .gitignore  Dockerfile  conftest.py  entrypoint.sh  pyproject.toml  pytest.ini
backend/analysis/: classifier.py  disagreement.py  embedder.py  eval.py  improvement.py  models.py  normalizer.py  outcomes.py  serializers.py  tasks.py  tests.py  urls.py  views.py
backend/analysis/migrations/: 0001_initial.py  0002_recommendationevidence_selection_reason.py  0003_goldsetitem.py  0004_promptversion_regression_note.py  0005_correctiondisagreement.py  0006_recommendation_outcome_unique.py
backend/analysis/tests/: test_disagreement.py  test_eval_service.py  test_goldset_api.py  test_improvement.py  test_outcomes.py  test_recommendation_decisions.py
backend/config/: settings.py  urls.py
backend/core/: middleware.py  models.py
backend/core/tests/: test_seed_real_data.py
backend/ingestion/: models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
backend/ingestion/migrations/: 0001_initial.py  0002_feedbackitem_source_external_id_uniq.py
backend/ingestion/tests/: test_routing_config_api.py
backend/reports/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/reports/migrations/: 0001_initial.py
backend/reports/services/: alerts.py  evidence.py  polish.py  scoring.py  sections.py  synthesis.py
backend/themes/: discovery.py  serializers.py  tasks.py  tests.py  urls.py  views.py
backend/trends/: engine.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
(+111 files in other folders)
