[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.3",
    "dj-database-url>=3.1.2",
    "django>=6.0.3",
    "djangorestframework>=3.17.1",
    "pgvector>=0.4.1",
    "psycopg[binary]>=3.3.3",
    "redis>=7.4.0",
]
